--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <span class="value">1er Avril</span>
                         </div>
                     </div>
-                    <p class="love-note">Joyeux Cadeau mon amour ❤️</p>
+                    <p class="love-note">Joyeux Noël mon amour ❤️</p>
                 </div>
             </div>
         </section>
